实体类调整优化